2002-06-07  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* exult.cc: typo

2002-06-07  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* *: merged audiotest branch back into main tree:

> 2002-06-06 Simon Quinn <email@simonquinn.co.uk>
>	* Recorded Exult title music in OGG pack and implemented in code
>
> 2002-06-03 Simon Quinn <email@simonquinn.co.uk>
>	* Play different SFX track at night and crickets
>	* Add config option <audio/disablepause> to toggle the pausing of
>    	  the audio when game pauses. (yes or no)
>
> 2002-05-29 Simon Quinn <email@simonquinn.co.uk>
>	* Work around for Usecode bug where track 0 is played at 
>	  Intro Earthquake.
>
> 2002-05-28 Simon Quinn <email@simonquinn.co.uk>
>	* Converted Windows MIDI out to use SDL_mixer, i.e. uses a 
> 	  Generic MidiOut.
>	* Changed MP3 references to DigitalMusic/OGG, now called 
>	  "DigitalMusic" in the audio settings.
>
> 2002-05-27 Simon Quinn <email@simonquinn.co.uk>
> 	* Implemented SDL_mixer/OGG changes into 'audiotest' branch of CVS.

2002-06-07  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* usecode/*: merged in new non-recursive usecode machine

2002-06-07  Jeff Freedman  <jeff@amy.nerble.net>

	* cheat.cc,drag.cc,drag.h:  Use Dragging_info for Paste so items
	get dropped properly.

2002-06-06  Ryan Nunn  <triforce@merlin.net.au>
	* browser.cc, gamerend.cc, gumps/gump_utils.cc : Fixing problems
	  introduced by Kirben when getting Exult Exult to compile with GCC3.1
	  in Windows.
	* actorio.cc, objs/objiter.cc, msvcstuff/Exult.dsp : Some last minute
	  changes for MSVC. Not required, but I though it would be a good idea
	  since the CVS Tag is being moved to include Kirbens changes

2002-06-05  Ryan Nunn  <triforce@merlin.net.au>
	* actors.cc : Removed the allow any item in back slot code.
	* gumps/Paperdoll_gump.cc : Fixed bug where items were in wrong places.
	* gumps/Paperdoll_gump_info.cc : Allow bags, barrels, boxes, crates,